--- a/movie.html
+++ b/movie.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">MovieInfo</a>
+          <a class="navbar-brand" href="index.html">CodeWithMe'FLIX</a>
         </div>
       </div>
     </nav>
