--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CodeWithMe'Flix - JavaScript Edition!</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
-    <link href="css/carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+
   </head>
   <body>
     <script src="./js/key.js"></script>
@@ -28,6 +26,7 @@
 	    	<h2 class="text-center">Search A Movie By Title</h2>
 	    	<form id="searchForm">
 	    		<input type="text" class="form-control" id="searchText" placeholder="Search Movies...">
+          <input type='submit' class='button' value='Search'>
 	    	</form>
 	    </div>
     </div>
@@ -36,59 +35,10 @@
       <div id="movies" class="row"></div>
     </div>
 
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="imgs/thrills.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Thrills!</h1>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="imgs/chills.jpg" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Chills!</h1>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="imgs/homealone.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>JavaScript Madness!!!</h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    <!-- /.carousel -->
-
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous">
     </script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
     <script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
