--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="container">
     	<div class="jumbotron">
-	    	<h2 class="text-center">Search A Movie By Title</h2>
+	    	<h2 class="text-center">Search For Movie By Title</h2>
 	    	<form id="searchForm">
 	    		<input type="text" class="form-control" id="searchText" placeholder="Search Movies...">
           <input type='submit' class='button' value='Search'>
