Fixed an error due to not encoding the search text Changed some lets to const Extracted duplicate functionality into a function

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>CodeWithMe'Flix - JavaScript Edition!</title>
 
     <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body>
-    <script src="./js/key.js"></script>
+    <script src="js/key.js"></script>
 
     <nav class="navbar navbar-default">
       <div class="container">
