--- a/movie.html
+++ b/movie.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>CodeWithMe'Flix - Movie Info</title>
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
   <body>
-    <script src="./js/key.js"></script>
+    <script src="js/key.js"></script>
 
     <nav class="navbar navbar-default">
       <div class="container">
