some stylistic changes, bugfixes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CodeWithMe'Flix - JavaScript Edition!</title>
+    <title>CodeWithMeFLIX</title>
 
-    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/css/style.css">
 
   </head>
@@ -16,7 +17,7 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">CodeWithMe'FLIX</a>
+          <a class="navbar-brand" href="index.html">CodeWithMe<span class="italic">FLIX</span></a>
         </div>
       </div>
     </nav>
@@ -41,5 +42,6 @@
     </script>
     <script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
