--- a/movie.html
+++ b/movie.html
@@ -2,9 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CodeWithMe'Flix - Movie Info</title>
-  <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
+  <title>CodeWithMeFLIX - Movie Info</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <link rel="stylesheet" href="/css/style.css">
+
+  <!-- <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css"> -->
 </head>
   <body>
     <script src="./js/key.js"></script>
@@ -12,14 +17,16 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">CodeWithMe'FLIX</a>
+          <a class="navbar-brand" href="index.html">CodeWithMe<span class="italic">FLIX</span></a>
         </div>
       </div>
     </nav>
 
     <div class="container">
-      <div id="movie" class="well"></div>
+      <div id="movie"></div>
     </div>
+
+    <br><br><br>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
