--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <nav class="navbar navbar-default">
       <div class="container">
+        <br>
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">CodeWithMe<span class="italic">FLIX</span></a>
         </div>
@@ -28,12 +29,16 @@
 	    	<form id="searchForm">
 	    		<input type="text" class="form-control" id="searchText" placeholder="Search Movies...">
           <input type='submit' class='button' value='Search'>
+          <a href="index.html" class='button2'>Reset</a>
 	    	</form>
+        <br>
+        <div id="resultCount"></div>
 	    </div>
     </div>
 
     <div class="container">
       <div id="movies" class="row"></div>
+      <div id="paginate"></div><br><br>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
